fixed transparency issue on mobile (hopefully)

--- a/main.css
+++ b/main.css
@@ -108,7 +108,7 @@ main {
   display: none;
 
   background-color: rgb(100, 100, 100);
-  background-color: rgb(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
   margin: 10px 10px;
 }
 
